<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinematics_interface</name>
  <version>0.0.0</version>
  <description>ik interface.</description>
  <maintainer email="denis@stogl.de">Denis Štogl</maintainer>
  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcutils</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>control_msgs</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
